compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__external_annotation_on_custom_type_with_constructors.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3377
expression: "\n@external(erlang, \"gleam_stdlib\", \"dict\")\npub type Dict(key, value) {\n  Dict(pairs: List(#(key, value)))\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "gleam_stdlib", "dict")
pub type Dict(key, value) {
  Dict(pairs: List(#(key, value)))
}


----- ERROR
error: External type with constructors
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub type Dict(key, value) {
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

This type is annotated with the `@external` annotation, but it has
constructors. The `@external` annotation is only for external types with no
constructors.
Hint: Remove the `@external` annotation
